【更新】任务提交申请信息。
Signed-off-by: armink <armink.ztl@gmail.com>

--- a/2019/JOB201903.md
+++ b/2019/JOB201903.md
@@ -11,6 +11,8 @@ demo 实现功能范围没有要求，可以参考现在已有的实时天气的
 - 显示效果位于：插件介绍的 `Weather Show Demo 在开发板上的运行效果` 章节
 - 源代码位于：https://github.com/RT-Thread/mpy-snippets/tree/master/demo/weather_show
 
+### [立即申请]( https://github.com/RT-Thread/community-activities/edit/master/2019/JOB201903.md )
+
 ## 小组成员
 
 ### 张三（请自行增加并修改）
