--- a/2019/JOB201904.md
+++ b/2019/JOB201904.md
@@ -4,6 +4,8 @@
 
 希望开发者能使用 python 封装更多的驱动库（比如：数码管、LCD12864、DS18B20）及软件库（比如：xml解析、CoAP 等）
 
+### [立即申请]( https://github.com/RT-Thread/community-activities/edit/master/2019/JOB201904.md )
+
 ## 小组成员
 
 ### 张三（请自行增加并修改）
