--- a/2019/JOB201905.md
+++ b/2019/JOB201905.md
@@ -8,6 +8,8 @@
 
 以后开发调试，可以直接在 qemu 上完成。希望实现 stm32 qemu 模拟：uart，pin，文件系统等功能
 
+### [立即申请]( https://github.com/RT-Thread/community-activities/edit/master/2019/JOB201905.md )
+
 ## 小组成员
 
 ### 张三（请自行增加并修改）
