--- a/2019/JOB201906.md
+++ b/2019/JOB201906.md
@@ -4,6 +4,8 @@
 
 [点击这里](https://www.rt-thread.org/document/site/development-guide/sensor/sensor_driver_development/) 查看传感器软件包开发指南
 
+### [立即申请]( https://github.com/RT-Thread/community-activities/edit/master/2019/JOB201906.md )
+
 ## 小组成员
 
 ### 张三（请自行增加并修改）
