--- a/2019/JOB201908.md
+++ b/2019/JOB201908.md
@@ -2,6 +2,8 @@
 
 当前 RT-Thread 的 imxRT BSP 已经开发完成了很多外设驱动，(https://github.com/RT-Thread/rt-thread/tree/master/bsp/imxrt/libraries/drivers)， 还需要开发 SDIO，USB Device, Host 驱动
 
+### [立即申请]( https://github.com/RT-Thread/community-activities/edit/master/2019/JOB201908.md )
+
 ## 小组成员
 
 ### 张三（请自行增加并修改）
