--- a/2019/JOB201907.md
+++ b/2019/JOB201907.md
@@ -2,6 +2,8 @@
 
 当前 RT-Thread 已经支持了很多 stm32 BSP， (https://github.com/RT-Thread/rt-thread/tree/master/bsp/stm32), 但是大部分 BSP 下仅支持了基本驱动，如 串口、GPIO，可以参考已经支持驱动较完善的 BSP，(https://github.com/RT-Thread/rt-thread/tree/master/bsp/stm32/stm32f429-atk-apollo), 来支持更多的外设驱动
 
+### [立即申请]( https://github.com/RT-Thread/community-activities/edit/master/2019/JOB201907.md )
+
 ## 小组成员
 
 ### 张三（请自行增加并修改）
