--- a/2019/JOB201906.md
+++ b/2019/JOB201906.md
@@ -22,3 +22,11 @@
 压力精度：±0.3kPa@25℃
 温度精度：±1.0℃
 需要修改一下底层的IIC驱动。
+
+### 黄贤景
+
+- 添加TI低功耗温湿度传感器HDC1000驱动包
+ - 温度精度：±.2℃
+ - 湿度精度：±3%
+ - 休眠电流：200nA
+ - 使用IIC接口
