--- a/2019/JOB201910.md
+++ b/2019/JOB201910.md
@@ -17,7 +17,7 @@ LoRa 作为低功耗局域网通信技术越来越流行，如果通过 LoRa 接
 |   | |    LoRaWAN Stack     | |   |
 |   | +----------------------+ |   |
 |   | +----------------------+ |   |
-|   | |    SX12XX package    | |   |
+|   | |  SX12XX phy package  | |   |
 |   | +----------------------+ |   |
 |   | +----------------------+ |   |
 |   | |      SPI Drivers     | |   |
@@ -38,7 +38,12 @@ LoRa 作为低功耗局域网通信技术越来越流行，如果通过 LoRa 接
 
 早些时候，已经有开发者提交了 SX12XX LoRa 芯片的软件包（ http://packages.rt-thread.org/detail.html?package=sx12xx ），这部分需要先针对与自己的硬件平台进行验证。
 
-当前主要工作是移植 LoRaWAN 协议栈，保证节点能够与 LoRaWAN 网关通信，并接入云端
+项目大致分为以下几个阶段：
+
+- M0: LoRa PHY 软件包开发阶段
+- M1: LoRaWAN 节点协议栈移植适配阶段
+- M2: LoRaWAN 协议栈测试，并接入云端
+- M3: LoRaWAN 网关预研、正式研发阶段
 
 ### [立即申请]( https://github.com/RT-Thread/community-activities/edit/master/2019/JOB201910.md )
 
