--- a/2019/JOB201910.md
+++ b/2019/JOB201910.md
@@ -20,7 +20,7 @@ LoRa 作为低功耗局域网通信技术越来越流行，如果通过 LoRa 接
 
 上层 LoRaWAN 软件包将依赖此软件包，实现底层通信解耦。
 
-### 1.2 LoRa Muti-RTC Timer
+### 1.2 LoRa Multi-RTC Timer
 
 multi-rtc-timer 是个比较轻薄的接口封装层。
 
@@ -34,7 +34,7 @@ multi-rtc-timer 是个比较轻薄的接口封装层。
 
 项目大致分为以下几个阶段：
 
-- M0: LoRa Radio Driver/LoRa Muti-RTC Timer 软件包开发阶段
+- M0: LoRa Radio Driver/LoRa Multi-RTC Timer 软件包开发阶段
 - M1: LoRaWAN 节点协议栈移植适配阶段
 - M2: LoRaWAN 协议栈测试，并接入云端
 - M3: LoRaWAN 网关预研、正式研发阶段
