【更新】LoRaWAN 任务。
Signed-off-by: armink <armink.ztl@gmail.com>

--- a/2019/JOB201910.md
+++ b/2019/JOB201910.md
@@ -35,8 +35,8 @@ multi-rtc-timer 是个比较轻薄的接口封装层。
 项目大致分为以下几个阶段：
 
 - M0: 底层软件包开发阶段
-    - LoRa Radio Driver/LoRa by，负责人 @X-Jing
-    - Multi-RTC Timer，负责人 @killer
+    - LoRa Radio Driver/LoRa by，负责人 @killer
+    - Multi-RTC Timer，负责人 @X-Jing
     - 设计阶段：01.16 - 02.15
     - 开发阶段：02.20 - 03.10
 - M1: LoRaWAN 节点协议栈移植适配阶段，优先级：ClassA->ClassC->ClassB，v1.0.3 为主，v1.1 后续再考虑
