--- a/2019/JOB201910.md
+++ b/2019/JOB201910.md
@@ -30,6 +30,13 @@ multi-rtc-timer 是个比较轻薄的接口封装层。
 
 这里主要是移植官方的 [协议栈]( https://github.com/Lora-net/LoRaMac-node ) ，通过上述两个软件包，协议栈可以实现对于硬件的解耦。
 
+## 会议纪要
+
+### 2020-03-04
+
+- LoRa Radio Driver ：准备提供设计文档，预计 03-12 评审
+- LoRa Multi-RTC Timer ：已提供设计图，暂定 03-20 评审。需要考虑 nano 版本的支持，细节得考虑的更加清晰。
+
 ## 路线图 
 
 项目大致分为以下几个阶段：
