【更新】Lora 会议纪要
Signed-off-by: armink <armink.ztl@gmail.com>

--- a/2019/JOB201910.md
+++ b/2019/JOB201910.md
@@ -37,6 +37,10 @@ multi-rtc-timer 是个比较轻薄的接口封装层。
 - LoRa Radio Driver ：准备提供设计文档，预计 03-12 评审
 - LoRa Multi-RTC Timer ：已提供设计图，暂定 03-20 评审。需要考虑 nano 版本的支持，细节得考虑的更加清晰。
 
+### 2020-03-13
+
+- LoRa Radio Driver 设计评审，初步确定了大致框架
+
 ## 路线图 
 
 项目大致分为以下几个阶段：
