--- a/2020/JOB202006.md
+++ b/2020/JOB202006.md
@@ -4,3 +4,16 @@
 若为STM32系列，请注意参考[BSP 制作教程](https://github.com/RT-Thread/rt-thread/tree/master/bsp/stm32)
 
 需要注意代码需遵守[代码规范](https://github.com/RT-Thread/rt-thread/blob/master/documentation/coding_style_cn.md)。
+
+
+## 小组成员
+
+### 许鹏虎
+
+* 制作STM32L010RB NUCLEO开发板BSP
+
+
+
+
+
+
