[JOB201906] Add three sensor packages
Contains three sensor packages: dhtxx, gp2y10, sgp30

--- a/2019/JOB201906.md
+++ b/2019/JOB201906.md
@@ -42,3 +42,22 @@
 - 温度精度：±.3℃
 - 湿度精度：±2%
 - 使用单总线和标准IIC两种接口
+
+### 卢华东
+
+- 添加奥松电子的数字温湿度传感器DHTxx驱动包，同时支持DHT11、DHT21、DHT22等传感器
+- 使用单总线接口
+
+### 卢华东
+
+- 添加夏普的光学灰尘传感器GP2Y10驱动包
+- 灵敏度：0.5V/(0.1mg/m3)
+- 最小粒子检出值：0.8μm
+- 使用ADC接口
+
+### 卢华东
+
+- 添加Sensirion的气体传感器SGP30驱动包，可检测TVOC和eCO2浓度
+- TVOC范围：0-60000ppb，精度：1ppb
+- eCO2范围：400-60000ppm，精度：1ppm
+- 使用IIC接口
