[JOB201901] 增加BC28 at_device软件包待完善工作

--- a/2019/JOB201901.md
+++ b/2019/JOB201901.md
@@ -28,3 +28,12 @@
 ### 卢华东
 
 移远 BC28 NB-IoT 模组适配
+
+目前 at_device 的 BC28 模块仍存在一些问题：
+
+- 不支持 UDP；
+- 数据发送/接收没有进行字符串和十六进制的转换；
+- BC28 固件带 MQTT 或 CoAP 功能，会占用 socket，直接调用 SAL 接口操作时会失败；
+
+我正在研究 SAL 和 at_socket 框架，尝试把它完善。
+
