--- a/2019/JOB201905.md
+++ b/2019/JOB201905.md
@@ -1,10 +1,10 @@
 ## 【JOB201905】让 qemu 把 stm32 也模拟出来
 
-目前的 qemu BSP 只要支持是的 A9 处理器，对于我们最常见的 STM32 芯片并为支持。
+目前的 qemu BSP 只支持 A9 处理器，对于我们最常见的 STM32 芯片并未支持。
 
 可以参考 GNU MCU Eclipse 已经支持了挺多 STM32 的 qemu ，可以参考 https://gnu-mcu-eclipse.github.io/qemu/
 
-目 qemu 已经可以支持M4浮点了，所以希望我们能支持一款 M3/M4 的 qemu stm32 开发板，作为 BSP
+且 qemu 已经可以支持M4浮点了，所以希望我们能支持一款 M3/M4 的 qemu stm32 开发板，作为 BSP
 
 以后开发调试，可以直接在 qemu 上完成。希望实现 stm32 qemu 模拟：uart，pin，文件系统等功能
 
@@ -14,3 +14,6 @@
 
 ### 樊晓杰
 QEMU 模拟 STM32F4-Discovery uart gpio.
+
+### 邓可笈
+QEMU 模拟 NUCLEO-STM32F103RB uart gpio
