--- a/2019/JOB201906.md
+++ b/2019/JOB201906.md
@@ -68,3 +68,15 @@
 - 测量精度：±1cm
 - 添加温度补偿功能
 - 添加采样滤波功能
+
+### 丁伟祥
+
+- 添加Analog低功耗加速度计驱动包
+- 待机电流：10A
+- 使用SPI接口
+-1.8 µA at 100 Hz ODR, 2.0 V supply
+-3.0 µA at 400 Hz ODR, 2.0 V supply
+-270 nA motion activated wake-up mode
+-10 nA standby current
+-High resolution: 1 mg/LSB
+
