格式化文档显示
1.修正待机电流单位错误的问题。
2.修改排版乱的问题。

--- a/2019/JOB201906.md
+++ b/2019/JOB201906.md
@@ -72,11 +72,11 @@
 ### 丁伟祥
 
 - 添加Analog低功耗加速度计驱动包
-- 待机电流：10A
+- 待机电流：10uA
 - 使用SPI接口
--1.8 µA at 100 Hz ODR, 2.0 V supply
--3.0 µA at 400 Hz ODR, 2.0 V supply
--270 nA motion activated wake-up mode
--10 nA standby current
--High resolution: 1 mg/LSB
+- 1.8 µA at 100 Hz ODR, 2.0 V supply
+- 3.0 µA at 400 Hz ODR, 2.0 V supply
+- 270 nA motion activated wake-up mode
+- 10 nA standby current
+- High resolution: 1 mg/LSB
 
