--- a/2019/JOB201910.md
+++ b/2019/JOB201910.md
@@ -58,7 +58,10 @@ multi-rtc-timer 是个比较轻薄的接口封装层。
 
 ## 小组成员
 
-### 张三
+### 陈均奎
 
-具体工作内容及时间安排
+有lorawan phy和mac的完整开发经验
+
+1. 对上面三个软件包的方式表示认可
+2.可以视当前具体开发情况进行M0或者M1阶段的开发
 
