--- a/2019/JOB201907.md
+++ b/2019/JOB201907.md
@@ -34,3 +34,7 @@
 ### 韩晨阳
 
 支持stm32f401-st-nucleo片上外设驱动（IIC/ADC/UART）
+
+### 谢勇贤
+
+支持stm32f413-st-nucleo片上外设驱动（SPI/I2C/timer/pwm/ADC/RTC/WDG/FLASH/OTGFS/RNG/UDID）
