--- a/2019/JOB201910.md
+++ b/2019/JOB201910.md
@@ -41,6 +41,11 @@ multi-rtc-timer 是个比较轻薄的接口封装层。
 
 - LoRa Radio Driver 设计评审，初步确定了大致框架
 
+### 2020-07-07
+
+- 确定 M1 时间安排，由 @Zhang 来做 LoRaWAN 软件包，07-20 出来第一个版本
+- 后续大家基于该版本软件包，逐步进行优化
+
 ## 路线图 
 
 项目大致分为以下几个阶段：
