[JOB201906] Add two sensor packages
增加两个传感器驱动软件包 ccs811 和 pmsxx，已提交到 packages 仓库

--- a/2019/JOB201906.md
+++ b/2019/JOB201906.md
@@ -80,3 +80,21 @@
 - 10 nA standby current
 - High resolution: 1 mg/LSB
 
+### 卢华东
+
+- 添加AMS的气体传感器CCS811驱动包，可检测TVOC和eCO2浓度
+- TVOC范围：0-32768ppb，精度：1ppb
+- eCO2范围：400-29206ppm，精度：1ppm
+- 使用IIC接口
+
+### 卢华东
+
+- 添加攀藤的PMS系列颗粒物浓度传感器PMSxx驱动包，PM1.0/PM2.5/PM10浓度，以及增强型的甲醛浓度、温湿度值
+- 颗粒物测量范围：0.3~1.0, 1.0~2.5, 2.5~10 μm（微米）
+- 颗粒物质量浓度有效量程：0~500 μg/m3（微克/立方米）
+- 颗粒物质量浓度最大量程：>1000 μg/m3（微克/立方米）
+- 颗粒物质量浓度分辨率：1 μg/m3（微克/立方米）
+- 甲醛范围：0-2 毫克/立方米，精度：0.001 毫克/立方米
+- 温度范围：0-99 ℃，精度：±0.5 ℃
+- 温度范围：0-99 %，精度：±2 %
+- 使用UART接口
