--- a/2020/JOB202006.md
+++ b/2020/JOB202006.md
@@ -15,6 +15,7 @@
 ### hao.dong
 
 * 制作hifive1 revB的BSP 
+* 发现已存在的[BSP](https://github.com/KatyushaScarlet/rt-thread-hifive1-revb)，修正了时钟并加入了LED支持
 
 ### 卢华东
 
