add bme680 package

--- a/2019/JOB201906.md
+++ b/2019/JOB201906.md
@@ -90,7 +90,7 @@
 ### 卢华东
 
 - 添加攀藤的PMS系列颗粒物浓度传感器PMSxx驱动包，PM1.0/PM2.5/PM10浓度，以及增强型的甲醛浓度、温湿度值
-- 颗粒物测量范围：0.3~1.0, 1.0~2.5, 2.5~10 μm（微米）
+- 颗粒物测量范围：0.3\~1.0, 1.0\~2.5, 2.5\~10 μm（微米）
 - 颗粒物质量浓度有效量程：0~500 μg/m3（微克/立方米）
 - 颗粒物质量浓度最大量程：>1000 μg/m3（微克/立方米）
 - 颗粒物质量浓度分辨率：1 μg/m3（微克/立方米）
@@ -98,3 +98,12 @@
 - 温度范围：0-99 ℃，精度：±0.5 ℃
 - 温度范围：0-99 %，精度：±2 %
 - 使用UART接口
+
+### 卢华东
+
+- 添加Bosch的环境传感器BME680驱动包，可检测气压、温度、湿度和 IAQ
+- 气压范围：300-1100hPa，精度：±0.6hPa(300-1100hPa,0~65℃)
+- 温度范围：-40℃~+85℃，精度：±1.0℃(0~65℃)
+- 湿度范围：0-100%r.H.，精度：±3%r.H.(20-80% r.H.,25℃)
+- IAQ（室内空气质量）范围：0-500（值越大，空气质量越差）
+- 支持IIC和SPI接口
