--- a/2020/JOB202007.md
+++ b/2020/JOB202007.md
@@ -33,9 +33,11 @@ https://github.com/mysterywolf/RT-Thread-wrapper-of-uCOS-III
 
 ### 2. uCOS-II
 
-计划编写中/正在编写中，由满鉴霆负责编写。
+https://github.com/mysterywolf/RT-Thread-wrapper-of-uCOS-III
 
-欢迎其他使用过uCOS-II的社区小伙伴加入共同维护。
+目前已经由满鉴霆编写完成（2020.12），项目转入日常维护阶段。
+
+欢迎其他使用过uCOS-III的社区小伙伴加入共同维护。
 
 
 
@@ -52,7 +54,7 @@ https://github.com/mysterywolf/RT-Thread-wrapper-of-uCOS-III
 ### 满鉴霆 (Meco Man)
 
 * 负责uCOS-III兼容层编写（已完成2020.07）与维护 
-* 负责uCOS-II兼容层编写（未完成）
+* 负责uCOS-II兼容层编写（已完成2020.12）与维护 
 
 
 
