--- a/2020/JOB202007.md
+++ b/2020/JOB202007.md
@@ -33,11 +33,11 @@ https://github.com/mysterywolf/RT-Thread-wrapper-of-uCOS-III
 
 ### 2. uCOS-II
 
-https://github.com/mysterywolf/RT-Thread-wrapper-of-uCOS-III
+https://github.com/mysterywolf/RT-Thread-wrapper-of-uCOS-II
 
 目前已经由满鉴霆编写完成（2020.12），项目转入日常维护阶段。
 
-欢迎其他使用过uCOS-III的社区小伙伴加入共同维护。
+欢迎其他使用过uCOS-II的社区小伙伴加入共同维护。
 
 
 
