--- a/2020/JOB202007.md
+++ b/2020/JOB202007.md
@@ -43,9 +43,7 @@ https://github.com/mysterywolf/RT-Thread-wrapper-of-uCOS-II
 
 ### 3. FreeRTOS
 
-请社区中使用并较为精通FreeRTOS的小伙伴考虑加入这个项目，编写FreeRTOS兼容层。
-
-目前急需会FreeRTOS的小伙伴加入这个项目！
+https://github.com/RT-Thread-packages/FreeRTOS-Wrapper
 
 
 
@@ -56,5 +54,7 @@ https://github.com/mysterywolf/RT-Thread-wrapper-of-uCOS-II
 * 负责uCOS-III兼容层编写（已完成2020.07）与维护 
 * 负责uCOS-II兼容层编写（已完成2020.12）与维护 
 
+### 唐照洲
 
+* 负责FreeRTOS兼容层的编写与维护
 
